--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.2
 distlib==0.3.6
 Django==4.1.3
 djangorestframework==3.14.0
+ez-setup==0.9
 filelock==3.8.0
 gunicorn==20.1.0
 mysqlclient==2.1.1
