--- a/requirements copy.txt
+++ b/requirements copy.txt
@@ -1,13 +1,15 @@
-
 asgiref==3.5.2
 distlib==0.3.6
 Django==4.1.3
 djangorestframework==3.14.0
+ez-setup==0.9
 filelock==3.8.0
 gunicorn==20.1.0
+mysql-connector-python==8.0.31
 mysqlclient==2.1.1
 Pillow==9.3.0
 platformdirs==2.5.4
+protobuf==3.20.1
 psycopg2-binary==2.9.5
 PyMySQL==1.0.2
 pytz==2022.6
